--- a/CptS_121_PA_5_Fall_2017/CptS_121_PA_5_Fall_2017.vcxproj
+++ b/CptS_121_PA_5_Fall_2017/CptS_121_PA_5_Fall_2017.vcxproj
@@ -142,6 +142,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="main.c" />
+    <ClCompile Include="Yahtzee.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Yahtzee.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="title.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
